# libplateau

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .licensed.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Gemfile  LICENCE.md  LICENSE.txt  README.md  ThirdPartyNotices.md  file_tree_of_fbxsdk.txt  stl.natvis  t
.github/: pull_request_template.md
.github/upload-dll/: action.yml
data/: 53392642_bldg_6697_op2.gml  README.md
examples/https_mock_test/: CMakeLists.txt  https_mock_test.cpp
examples/log_skipped_elements/: CMakeLists.txt  log_skipped_elements.cpp
include/: PolarToPlaneCartesian.h  libplateau_api.h  obj_writer.h  plateau_dll_logger.h
src/: CMakeLists.txt
src/basemap/: CMakeLists.txt  TileProjection.cpp  VectorTileDownloader.cpp  VectorTileLoader.cpp  tile_projection.cpp  vector_tile_downloader.cpp
src/c_wrapper/: CMakeLists.txt  address_c.cpp  appearance_c.cpp  appearancetarget_c.cpp  appearancetargetdefinition_c.cpp  attributesmap_c.cpp  attributevalue_c.cpp  available_lod_searcher_c.cpp  city_model_c.cpp  city_model_c.h  city_model_package_info_c.cpp  city_object_c.cpp  city_object_list_c.cpp  citygml_c.cpp  client_c.cpp  dataset_accessor_p_invoke_c.cpp  dataset_metadata_c.cpp  dataset_metadata_group_c.cpp  dataset_source_c.cpp  fbx_writer_c.cpp  featureobject_c.cpp  geo_reference_c.cpp  geometry_c.cpp  geometry_utils_c.cpp  gltf_writer_c.cpp  gml_file_c.cpp  gml_file_info_c.cpp  granularity_converter_c.cpp  height_map_aligner_c.cpp  heightmap_generator_c.cpp  heightmap_mesh_generator_c.cpp  i_dataset_accessor_c.cpp  libplateau_c.h  linearring_c.cpp  local_dataset_accessor_c.cpp  lod_searcher_c.cpp  map_zoom_level_searcher_c.cpp  material_adjuster_by_attr.cpp  material_adjuster_by_type_c.cpp  material_c.cpp  (+27 more)
src/dataset/: CMakeLists.txt  dataset_source.cpp  gml_file.cpp  local_dataset_accessor.cpp  local_dataset_accessor.h  lod_searcher.cpp  mesh_code.cpp  server_dataset_accessor.cpp  server_dataset_accessor.h
src/geometry/: CMakeLists.txt  geo_coordinate.cpp  geo_reference.cpp  geometry_utils.cpp  geometry_utils.h  grid_merger.cpp  grid_merger.h  mesh.cpp  mesh_extractor.cpp  model.cpp  model_node.cpp  node.cpp  polar_to_plane_cartesian.cpp  polar_to_plane_cartesian.h  sub_mesh.cpp
src/granularity_convert/: CMakeLists.txt  convert_from_atomic_to_area.cpp  convert_from_atomic_to_material_in_primary.cpp  convert_from_atomic_to_primary.cpp  convert_to_atomic.cpp  filter_by_city_obj_index.cpp  granularity_converter.cpp  merge_primary_node_and_children.cpp  node_path.cpp
src/height_map_aligner/: CMakeLists.txt  height_map_aligner.cpp  open_mesh_converter.cpp
src/height_map_generator/: CMakeLists.txt  heightmap_generator.cpp  heightmap_mesh_generator.cpp  heightmap_operation.cpp  heightmap_with_alpha.cpp
src/io/: CMakeLists.txt  PolarToPlaneCartesian.cpp  gltf_writer.cpp  gltf_writer.h  mesh_convert_options_factory.cpp  mesh_converter.cpp  mesh_merger.cpp  obj_writer.cpp  obj_writer.h  plateau_dll_logger.cpp  plateau_polygon.cpp  polar_to_plane_cartesian.cpp  polar_to_plane_cartesian.h  polygon_with_uv2.cpp
src/material_adjust/: CMakeLists.txt  material_adjuster_by_attr.cpp  material_adjuster_by_type.cpp  material_adjuster_common.cpp
src/mesh_writer/: CMakeLists.txt  fbx_writer.cpp  fbx_writer_dummy.cpp  gltf_writer.cpp  obj_writer.cpp
src/network/: CMakeLists.txt  client.cpp
src/polygon_mesh/: CMakeLists.txt  area_mesh_factory.cpp  area_mesh_factory.h  city_object_list.cpp  grid_merger.cpp  grid_merger.h  map_attacher.cpp  mesh.cpp  mesh_extractor.cpp  mesh_extractor_dummy.cpp  mesh_factory.cpp  mesh_merger.cpp  mesh_merger.h  model.cpp  node.cpp  node.cpp.rej  polygon_mesh_utils.cpp  polygon_mesh_utils.h  sub_mesh.cpp  sub_mesh.cpp.bak  transform.cpp  transform_impl.h  transform_stack.h
src/texture/: CMakeLists.txt  atlas_container.cpp  atlas_manager.cpp  heightmap_generator.cpp  image_reader.cpp  jpeg.cpp  jpeg_image_reader.cpp  jpeg_texture_image.cpp  map_zoom_level_searcher.cpp  png_image_reader.cpp  png_texture_image.cpp  texture_atlas_canvas.cpp  texture_image.cpp  texture_image_base.cpp  texture_image_base_dummy.cpp  texture_packer.cpp  texture_packer_dummy.cpp  tiff_image_reader.cpp  tiff_texture_image.cpp
src/udx/: CMakeLists.txt  available_lod_searcher.cpp  boyer_moore.cpp  dataset_accessor_p_invoke.cpp  dataset_source.cpp  gml_file.cpp  gml_file_info.cpp  local_dataset_accessor.cpp  lod_searcher.cpp  mesh_code.cpp  udx_file_collection.cpp
test/: CMakeLists.txt  test_available_lod_searcher.cpp  test_dataset.cpp  test_dataset_accessor_p_invoke.cpp  test_dataset_source.cpp  test_fbx_writer.cpp  test_gltf_writer.cpp  test_gml_file.cpp  test_gml_file_info.cpp  test_granularity_converter.cpp  test_granularity_converter.h  test_granularity_converter_model_for_test.cpp  test_granularity_converter_model_for_test.h  test_grid_merger.cpp  test_height_map_aligner.cpp  test_heightmap_mesh_generator.cpp  test_lod_searcher.cpp  test_map_attacher.cpp  test_map_zoom_level_searcher.cpp  test_mesh_code.cpp  test_mesh_converter.cpp  test_mesh_extractor.cpp  test_mesh_merger.cpp  test_model.cpp  test_network_client.cpp  test_obj_writer.cpp  test_primary_city_object_types.cpp  test_server_dataset_accessor.cpp  test_texture_image.cpp  test_texture_image_base.cpp  test_texture_packer.cpp  test_udx.cpp  test_vector_tile.cpp
test/test_granularity_convert/: CMakeLists.txt  model_convert_test_patterns.cpp  model_convert_test_patterns.h  test_granularity_converter.cpp  test_granularity_converter.h
wrappers/c/: CMakeLists.txt  address_c.cpp  appearance_c.cpp  appearancetarget_c.cpp  appearancetargetdefinition_c.cpp  attributesmap_c.cpp  attributevalue_c.cpp  city_model_c.cpp  city_model_c.h  city_object_c.cpp  citygml_c.cpp  featureobject_c.cpp  geometry_c.cpp  libplateau_c.h  linearring_c.cpp  materialtargetdefinition_c.cpp  obj_writer_c.cpp  object_c.cpp  polygon_c.cpp  texture.cpp  texture_c.cpp  texturecoordinates_c.cpp  texturetargetdefinition_c.cpp
wrappers/python/: CMakeLists.txt  python_wrapper.cpp
(+291 files in other folders)
